[gd_scene load_steps=2 format=3 uid="uid://b2ug11gccvw24"]

[ext_resource type="Script" path="res://client.gd" id="1_twki5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 43.0
offset_bottom = 52.0
script = ExtResource("1_twki5")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 303.0
offset_right = 242.0
offset_bottom = 380.0
text = "Create Room"

[node name="StartGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 45.0
offset_top = 436.0
offset_right = 203.0
offset_bottom = 487.0
text = "Start Game"

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 15.0
offset_right = 242.0
offset_bottom = 81.0

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 25.0
offset_right = 105.0
offset_bottom = 52.0
text = "Name"

[node name="DrawMap" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 580.0
offset_right = 246.0
offset_bottom = 654.0
text = "Draw Map"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 657.0
offset_top = 68.0
offset_right = 1157.0
offset_bottom = 626.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 822.0
offset_top = 15.0
offset_right = 996.0
offset_bottom = 41.0
text = "Select a waiting room"

[node name="Connect" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 107.0
offset_right = 242.0
offset_bottom = 171.0
text = "Connect to Server"

[node name="ConnStatus" type="Label" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 218.0
offset_right = 190.0
offset_bottom = 244.0
text = "disconnected"

[connection signal="pressed" from="Host" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="DrawMap" to="." method="_on_draw_map_pressed"]
[connection signal="pressed" from="Connect" to="." method="_on_connect_pressed"]
